tests/golden/defaults/home-assistant/home-assistant/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/name: syn-home-assistant
    name: syn-home-assistant
  name: syn-home-assistant
